# week2practice

./: .gitignore  frames_2025-03-21_20.23.43.gv  my_map.pgm  my_map.yaml
install/: local_setup.sh  setup.sh
install/bringup/share/bringup/: local_setup.sh  package.sh
install/bringup/share/bringup/launch/: diff_bot.launch.py
install/bringup/share/bringup/rviz/: urdf_config.rviz
install/local_costmap/share/local_costmap/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/local_costmap/share/local_costmap/cmake/: local_costmapConfig.cmake
install/my_map/lib/my_map/: my_map
install/my_map/share/my_map/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/subp3d_pubtf/lib/subp3d_pubtf/: tf_publisher
install/subp3d_pubtf/share/subp3d_pubtf/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/subtf_print/lib/subtf_print/: subtf_print
install/subtf_print/share/subtf_print/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: diff_bot.launch.py  mecanum_bot.launch.py
src/bringup/src/description/: diff_bot_description.urdf  mecanum_bot_description.urdf
src/local_costmap/: CMakeLists.txt
src/local_costmap/src/: local_costmap.cpp
src/my_map/: setup.cfg  setup.py
src/subp3d_pubtf/: CMakeLists.txt
src/subp3d_pubtf/src/: tf_publisher.cpp
src/subtf_print/: CMakeLists.txt  package.xml
src/subtf_print/src/: subtf_print.cpp
(+6 files in other folders)
